Create Autocomplete component
- Add new tab to test_input jupyter notebook to test it

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "substantial-ghana",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "floral-upgrade",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "documented-raise",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2a900805",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b43ef36b-4e3e-4667-b8ee-262e98db2d0d",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2091a0c4",
    "metadata": {},
    "outputs": [],
@@ -172,12 +172,69 @@
     "box_52 = mdc.Box(children=[input_integer, view_integer])\n",
     "box_53 = mdc.Box(children=[input_float, view_float])\n",
     "\n",
-    "box_5 = mdc.Box(children=[box_51, box_52, box_53])"
+    "box_54 = mdc.InputText(value=\"Some additional text\")\n",
+    "\n",
+    "box_5 = mdc.Box(children=[box_51, box_52, box_53, box_54])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "2d08930d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Autocomplete\n",
+    "\n",
+    "scientists = [\n",
+    "    {\"label\": \"Thomas Edison\", \"invention\": \"Invented the practical electric light bulb and the phonograph.\", \"value\": \"0\", \"group\": \"T\"},\n",
+    "    {\"label\": \"Nikola Tesla\", \"invention\": \"Contributed to the development of alternating current (AC) power systems.\", \"value\": \"1\", \"group\": \"N\"},\n",
+    "    {\"label\": \"Michael Faraday\", \"invention\": \"Discovered electromagnetic induction and laws of electrolysis.\", \"value\": \"2\", \"group\": \"M\"},\n",
+    "    {\"label\": \"Benjamin Franklin\", \"invention\": \"Demonstrated the existence of positive and negative electrical charges.\", \"value\": \"3\", \"group\": \"B\"},\n",
+    "    {\"label\": \"Alessandro Volta\", \"invention\": \"Invented the electric battery, known as the voltaic pile.\", \"value\": \"4\", \"group\": \"A\"},\n",
+    "    {\"label\": \"James Clerk Maxwell\", \"invention\": \"Formulated the four Maxwell's equations of electromagnetism.\", \"value\": \"5\", \"group\": \"J\"},\n",
+    "    {\"label\": \"Georg Simon Ohm\", \"invention\": \"Introduced Ohm's law relating voltage, current, and resistance.\", \"value\": \"6\", \"group\": \"G\"},\n",
+    "    {\"label\": \"Heinrich Hertz\", \"invention\": \"Experimentally confirmed the existence of electromagnetic waves.\", \"value\": \"7\", \"group\": \"H\"},\n",
+    "    {\"label\": \"Edwin Hubble\", \"invention\": \"Contributed to the understanding of the expanding universe.\", \"value\": \"8\", \"group\": \"E\"},\n",
+    "    {\"label\": \"Charles-Augustin de Coulomb\", \"invention\": \"Established Coulomb's law for electrostatic force between charges.\", \"value\": \"9\", \"group\": \"C\"}\n",
+    "]\n",
+    "\n",
+    "autocomplete = mdc.Autocomplete(\n",
+    "    id=\"autocomplete\",\n",
+    "    labelText=\"test autocomplete\",\n",
+    "    options=scientists,\n",
+    "    multiple=False,\n",
+    "    width=\"300px\",\n",
+    "    groupByField=\"group\",\n",
+    "    size=\"medium\"\n",
+    ")\n",
+    "\n",
+    "text_61 = mdc.Typography(\n",
+    "    id=\"text-61\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "autocomplete_multiple = mdc.Autocomplete(\n",
+    "    id=\"autocomplete-multiple\",\n",
+    "    labelText=\"Pick your favorite scientists\",\n",
+    "    options=scientists,\n",
+    "    multiple=True,\n",
+    "    width=\"300px\",\n",
+    ")\n",
+    "\n",
+    "text_62 = mdc.Typography(\n",
+    "    id=\"text-62\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box_6 = mdc.Box(children=[autocomplete, text_61, autocomplete_multiple, text_62])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
@@ -185,13 +242,14 @@
     "# Dashboard layout\n",
     "\n",
     "tab = mdc.Tab(\n",
-    "    children=[box, box_2, box_3, box_4, box_5],\n",
+    "    children=[box, box_2, box_3, box_4, box_5, box_6],\n",
     "    tabs=[\n",
     "        {\"label\": \"Toggle\"},\n",
     "        {\"label\": \"Dropdown\"},\n",
     "        {\"label\": \"Calendar\"},\n",
     "        {\"label\": \"Slider\"},\n",
-    "        {\"label\": \"Text input\"}\n",
+    "        {\"label\": \"Text input\"},\n",
+    "        {\"label\": \"Autocomplete\"}\n",
     "    ]\n",
     ")\n",
     "section = mdc.Section(\n",
@@ -208,19 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "extra-kenya",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash is running on http://0.0.0.0:8001/\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dash app\n",
     "\n",
@@ -283,6 +332,26 @@
     ")\n",
     "def update_float(value):\n",
     "    return value\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-61', component_property='text'),\n",
+    "    Input(component_id='autocomplete', component_property='selected'),\n",
+    ")\n",
+    "def update_autocomplete(value: dict):\n",
+    "    if value and len(value):\n",
+    "        return value[0][\"invention\"]\n",
+    "    return \"No option selected...\"\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-62', component_property='text'),\n",
+    "    Input(component_id='autocomplete-multiple', component_property='selected'),\n",
+    ")\n",
+    "def update_autocomplete_multiple(value: list):\n",
+    "    if value and len(value):\n",
+    "        return \"FAVOURITES: \" + \", \".join([v[\"label\"] for v in value])\n",
+    "    return \"No options selected...\"\n",
+    "\n",
     "\n",
     "\n",
     "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=True)"
