Add adornments and width props to InputText

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -143,6 +143,7 @@
     "    maxLength=8,\n",
     "    autoFocus=True,\n",
     "    size=\"medium\",\n",
+    "    width=\"300px\"\n",
     ")\n",
     "\n",
     "input_integer = mdc.InputText(\n",
@@ -151,7 +152,9 @@
     "    minValue=-100,\n",
     "    maxValue=100,\n",
     "    inputType=\"integer\",\n",
-    "    labelText=\"integer\"\n",
+    "    labelText=\"integer\",\n",
+    "    adornmentRight=\"Amps\",\n",
+    "    width=\"300px\"\n",
     ")\n",
     "\n",
     "input_float = mdc.InputText(\n",
@@ -161,7 +164,9 @@
     "    maxValue=209.99,\n",
     "    inputType=\"float\",\n",
     "    precision=3,\n",
-    "    labelText=\"float\"\n",
+    "    labelText=\"float\",\n",
+    "    adornmentLeft=\"V\",\n",
+    "    width=\"300px\"\n",
     ")\n",
     "\n",
     "view_text = mdc.Typography(id=\"view-text\")\n",
@@ -172,7 +177,7 @@
     "box_52 = mdc.Box(children=[input_integer, view_integer])\n",
     "box_53 = mdc.Box(children=[input_float, view_float])\n",
     "\n",
-    "box_54 = mdc.InputText(value=\"Some additional text\")\n",
+    "box_54 = mdc.InputText(value=\"Some additional text\", width=\"300px\")\n",
     "\n",
     "box_5 = mdc.Box(children=[box_51, box_52, box_53, box_54])"
    ]
