Rename to dash-material-components

--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -10,7 +10,7 @@
     "from jupyter_dash import JupyterDash\n",
     "from dash import Input, Output\n",
     "\n",
-    "import dash_mdc_neptune as mdc"
+    "import dash_material_components as mdc"
    ]
   },
   {
