--- a/notebooks/test_alert.ipynb
+++ b/notebooks/test_alert.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dash_mdc_neptune as mdc\n",
+    "import dash_material_components as mdc\n",
     "\n",
     "from dash import dcc, Input, Output\n",
     "import jupyter_dash"
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
