--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dash_mdc_neptune as mdc\n",
+    "import dash_material_components as mdc\n",
     "\n",
     "from jupyter_dash import JupyterDash\n",
     "from dash import Input, Output\n"
