--- a/notebooks/test_layout.ipynb
+++ b/notebooks/test_layout.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import jupyter_dash\n",
-    "import dash_mdc_neptune as mdc"
+    "import dash_material_components as mdc"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
