--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "\n",
-    "import dash_mdc_neptune as mdc"
+    "import dash_material_components as mdc"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
