Change Slider interface, allow floats
- Remove showInputText prop
- Add adornment props
- Add inputType prop ('integer', 'float')
- Update validation
- Add precision prop
- Add tests to jupyter notebook

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -100,10 +100,10 @@
    "source": [
     "# Test slider\n",
     "\n",
-    "slider = mdc.Slider(\n",
-    "    id=\"slider\",\n",
+    "slider_41 = mdc.Slider(\n",
+    "    id=\"slider-41\",\n",
     "    width=300,\n",
-    "    labelText=\"test\",\n",
+    "    labelText=\"integer\",\n",
     "    minValue=-100,\n",
     "    maxValue=100,\n",
     "    stepValue=10,\n",
@@ -115,15 +115,63 @@
     "        {\"label\": \"50\", \"value\": 50},\n",
     "        {\"label\": \"100\", \"value\": 100},\n",
     "    ],\n",
-    "    showInputText=True,\n",
+    "    inputType=\"integer\",\n",
+    "    inputLeftAdornment=\"%\"\n",
     ")\n",
-    "text_4 = mdc.Typography(\n",
-    "    id=\"text-4\",\n",
+    "text_41 = mdc.Typography(\n",
+    "    id=\"text-41\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box_4 = mdc.Box(children=[slider, text_4])"
+    "slider_42 = mdc.Slider(\n",
+    "    id=\"slider-42\",\n",
+    "    width=300,\n",
+    "    labelText=\"float\",\n",
+    "    minValue=-100,\n",
+    "    maxValue=100,\n",
+    "    stepValue=10,\n",
+    "    selected=50.12345,\n",
+    "    marks=[\n",
+    "        {\"label\": \"-100\", \"value\": -100},\n",
+    "        {\"label\": \"-50\", \"value\": -50},\n",
+    "        {\"label\": \"0\", \"value\": 0},\n",
+    "        {\"label\": \"50\", \"value\": 50},\n",
+    "        {\"label\": \"100\", \"value\": 100},\n",
+    "    ],\n",
+    "    inputType=\"float\",\n",
+    "    precision=2,\n",
+    "    inputRightAdornment=\"%\",\n",
+    ")\n",
+    "text_42 = mdc.Typography(\n",
+    "    id=\"text-42\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "slider_43 = mdc.Slider(\n",
+    "    id=\"slider-43\",\n",
+    "    width=300,\n",
+    "    labelText=\"No input text\",\n",
+    "    minValue=-100,\n",
+    "    maxValue=100,\n",
+    "    stepValue=10,\n",
+    "    selected=50.12345,\n",
+    "    marks=[\n",
+    "        {\"label\": \"-100\", \"value\": -100},\n",
+    "        {\"label\": \"-50\", \"value\": -50},\n",
+    "        {\"label\": \"0\", \"value\": 0},\n",
+    "        {\"label\": \"50\", \"value\": 50},\n",
+    "        {\"label\": \"100\", \"value\": 100},\n",
+    "    ]\n",
+    ")\n",
+    "text_43 = mdc.Typography(\n",
+    "    id=\"text-43\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box_4 = mdc.Box(children=[slider_41, text_41, slider_42, text_42, slider_43, text_43])"
    ]
   },
   {
@@ -311,8 +359,22 @@
     "\n",
     "\n",
     "@app.callback(\n",
-    "    Output(component_id='text-4', component_property='text'),\n",
-    "    Input(component_id='slider', component_property='selected'),\n",
+    "    Output(component_id='text-41', component_property='text'),\n",
+    "    Input(component_id='slider-41', component_property='selected'),\n",
+    ")\n",
+    "def update_slider_int(value):\n",
+    "    return value\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-42', component_property='text'),\n",
+    "    Input(component_id='slider-42', component_property='selected'),\n",
+    ")\n",
+    "def update_slider_float(value):\n",
+    "    return value\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-43', component_property='text'),\n",
+    "    Input(component_id='slider-43', component_property='selected'),\n",
     ")\n",
     "def update_slider(value):\n",
     "    return value\n",
