Add Slider functional tests

--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "congressional-chile",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "annual-interview",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
     "        {\"label\": \"50\", \"value\": 50},\n",
     "        {\"label\": \"100\", \"value\": 100},\n",
     "    ],\n",
-    "    showInputText=True,\n",
+    "    inputType=\"float\",\n",
     ")\n",
     "sidebar = mdc.SideBar(\n",
     "    children=[toggle, calendar, dropdown, slider],\n",
@@ -102,43 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "earned-particle",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash is running on http://0.0.0.0:8001/\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on all addresses (0.0.0.0)\n",
-      " * Running on http://127.0.0.1:8001\n",
-      " * Running on http://192.168.3.225:8001\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [09/Oct/2023 11:35:33] \"GET /_alive_a374ead4-108d-4cf3-98bb-33335fbbedb2 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [09/Oct/2023 11:35:35] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [09/Oct/2023 11:35:36] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [09/Oct/2023 11:35:36] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [09/Oct/2023 11:35:36] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [09/Oct/2023 11:35:36] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [09/Oct/2023 11:35:36] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
