Improve slider input width calculation
- Uppercase letters in adornment take double the space
- Add margin prop to customize component margin
- Update slider test in test_sidebar jupyter notebook

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -141,7 +141,8 @@
     "    ],\n",
     "    inputType=\"float\",\n",
     "    precision=2,\n",
-    "    inputRightAdornment=\"%\",\n",
+    "    inputRightAdornment=\"MWh\",\n",
+    "    margin=3\n",
     ")\n",
     "text_42 = mdc.Typography(\n",
     "    id=\"text-42\",\n",
