--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -55,7 +55,7 @@
     ")\n",
     "calendar = mdc.Calendar(\n",
     "    id=\"calendar\",\n",
-    "    width=170,\n",
+    "    width=180,\n",
     "    labelText=\"test\",\n",
     "    helperText=\"test\",\n",
     "    minDate=\"2022-01-01\",\n",
@@ -64,7 +64,7 @@
     ")\n",
     "dropdown = mdc.Dropdown(\n",
     "    id=\"dropdown\",\n",
-    "    width=170,\n",
+    "    width=180,\n",
     "    labelText=\"test\",\n",
     "    helperText=\"test\",\n",
     "    options=[\"test 1\", \"test 2\"],\n",
@@ -81,12 +81,13 @@
     "    selected=50,\n",
     "    marks=[\n",
     "        {\"label\": \"-100\", \"value\": -100},\n",
-    "        {\"label\": \"-50\", \"value\": -50},\n",
+    "        {\"label\": \"\", \"value\": -50},\n",
     "        {\"label\": \"0\", \"value\": 0},\n",
-    "        {\"label\": \"50\", \"value\": 50},\n",
+    "        {\"label\": \"\", \"value\": 50},\n",
     "        {\"label\": \"100\", \"value\": 100},\n",
     "    ],\n",
     "    inputType=\"float\",\n",
+    "    inputRightAdornment=\"MWh\"\n",
     ")\n",
     "sidebar = mdc.SideBar(\n",
     "    children=[toggle, calendar, dropdown, slider],\n",
