Add setProp prop to update message in server

--- a/notebooks/test_alert.ipynb
+++ b/notebooks/test_alert.ipynb
@@ -2,33 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dash_material_components as mdc\n",
-    "\n",
-    "from dash import dcc, Input, Output\n",
+    "from datetime import datetime\n",
+    "from dash import html, dcc, Input, Output, State\n",
     "import jupyter_dash"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test alert\n",
     "\n",
     "input = dcc.Input(id=\"input\")\n",
-    "box = mdc.Box(children=[input])\n",
+    "button = html.Button(\"Submit\", id=\"button\", n_clicks=0)\n",
+    "box = mdc.Box(children=[input, button])\n",
     "\n",
     "alert = mdc.Alert(id=\"alert\", severity=\"info\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +62,13 @@
     "\n",
     "@app.callback(\n",
     "    Output(component_id=\"alert\", component_property=\"message\"),\n",
-    "    Input(component_id=\"input\", component_property=\"value\"),\n",
+    "    Input(component_id=\"button\", component_property=\"n_clicks\"),\n",
+    "    State(component_id=\"input\", component_property=\"value\"),\n",
     ")\n",
-    "def update_alert(value):\n",
+    "def update_alert(n_clicks, value):\n",
     "    return value\n",
     "\n",
-    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001, debug=False)"
+    "app.run_server(mode='external', host=\"0.0.0.0\", port=8007, debug=False)"
    ]
   },
   {
@@ -93,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
