Add Button component

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -259,7 +259,8 @@
     "    multiple=False,\n",
     "    width=\"300px\",\n",
     "    groupByField=\"group\",\n",
-    "    size=\"medium\"\n",
+    "    size=\"medium\",\n",
+    "    freeSolo=True\n",
     ")\n",
     "\n",
     "text_61 = mdc.Typography(\n",
@@ -274,6 +275,7 @@
     "    options=scientists,\n",
     "    multiple=True,\n",
     "    width=\"300px\",\n",
+    "    freeSolo=True,\n",
     ")\n",
     "\n",
     "text_62 = mdc.Typography(\n",
@@ -288,6 +290,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef526880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test button\n",
+    "\n",
+    "button_1 = mdc.Button(\n",
+    "    id=\"button-1\",\n",
+    "    text=\"Click me!\",\n",
+    "    variant=\"contained\",\n",
+    "    color=\"primary\",\n",
+    "    endIcon=\"save\",\n",
+    "    # iconColor=\"secondary\",\n",
+    ")\n",
+    "\n",
+    "button_2 = mdc.Button(\n",
+    "    id=\"button-2\",\n",
+    "    text=\"Click me!\",\n",
+    "    variant=\"outlined\",\n",
+    "    color=\"secondary\",\n",
+    ")\n",
+    "\n",
+    "button_3 = mdc.Button(\n",
+    "    id=\"button-3\",\n",
+    "    text=\"Click me!\",\n",
+    "    variant=\"text\",\n",
+    "    color=\"default\",\n",
+    ")\n",
+    "\n",
+    "box_btns = mdc.Box(children=[button_1, button_2, button_3], sx={\"display\": \"flex\", \"gap\": \"10px\"})\n",
+    "\n",
+    "text_71 = mdc.Typography(\n",
+    "    id=\"text-71\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "text_72 = mdc.Typography(\n",
+    "    id=\"text-72\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "text_73 = mdc.Typography(\n",
+    "    id=\"text-73\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box_clicks = mdc.Box(children=[text_71, text_72, text_73], sx={\"display\": \"flex\", \"gap\": \"20px\"})\n",
+    "box_7 = mdc.Box(children=[box_btns, box_clicks])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
@@ -295,14 +353,15 @@
     "# Dashboard layout\n",
     "\n",
     "tab = mdc.Tab(\n",
-    "    children=[box, box_2, box_3, box_4, box_5, box_6],\n",
+    "    children=[box, box_2, box_3, box_4, box_5, box_6, box_7],\n",
     "    tabs=[\n",
     "        {\"label\": \"Toggle\"},\n",
     "        {\"label\": \"Dropdown\"},\n",
     "        {\"label\": \"Calendar\"},\n",
     "        {\"label\": \"Slider\"},\n",
     "        {\"label\": \"Text input\"},\n",
-    "        {\"label\": \"Autocomplete\"}\n",
+    "        {\"label\": \"Autocomplete\"},\n",
+    "        {\"label\": \"Button\"},\n",
     "    ]\n",
     ")\n",
     "section = mdc.Section(\n",
@@ -419,6 +478,26 @@
     "        return \"FAVOURITES: \" + \", \".join([v[\"label\"] for v in value])\n",
     "    return \"No options selected...\"\n",
     "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-71', component_property='text'),\n",
+    "    Input(component_id='button-1', component_property='nClicks'),\n",
+    ")\n",
+    "def update_clicks_1(n_clicks):\n",
+    "    return f\"{n_clicks} clicks\"\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-72', component_property='text'),\n",
+    "    Input(component_id='button-2', component_property='nClicks'),\n",
+    ")\n",
+    "def update_clicks_2(n_clicks):\n",
+    "    return f\"{n_clicks} clicks\"\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-73', component_property='text'),\n",
+    "    Input(component_id='button-3', component_property='nClicks'),\n",
+    ")\n",
+    "def update_clicks_3(n_clicks):\n",
+    "    return f\"{n_clicks} clicks\"\n",
     "\n",
     "\n",
     "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=True)"
