Fix freesolo in Autocomplete

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -302,7 +302,8 @@
     "    variant=\"contained\",\n",
     "    color=\"primary\",\n",
     "    endIcon=\"save\",\n",
-    "    # iconColor=\"secondary\",\n",
+    "    nClicks=0,\n",
+    "    disabled=False,\n",
     ")\n",
     "\n",
     "button_2 = mdc.Button(\n",
@@ -466,7 +467,7 @@
     ")\n",
     "def update_autocomplete(value: dict):\n",
     "    if value and len(value):\n",
-    "        return value[0][\"invention\"]\n",
+    "        return f\"{value[0]['label']} : {value[0]['invention'] if 'invention' in value[0].keys() else 'no data on this scientist'}\"\n",
     "    return \"No option selected...\"\n",
     "\n",
     "@app.callback(\n",
