Add error component

--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "\n",
+    "from dash import html, Input, Output\n",
     "import dash_material_components as mdc"
    ]
   },
@@ -27,11 +28,12 @@
     "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}]\n",
     ")\n",
     "\n",
+    "button = html.Button(\"Show error page\", id=\"button\", n_clicks=0)\n",
     "section_1 = mdc.Section(\n",
     "    id=\"section-1\",\n",
     "    orientation=\"rows\",\n",
-    "    children=[text, text_2],\n",
-    "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}]\n",
+    "    children=[text, text_2, button],\n",
+    "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}, {\"title\": \"Card 1c\"}]\n",
     ")\n",
     "\n",
     "section_2 = mdc.Section(\n",
@@ -39,8 +41,7 @@
     "    children=tab,\n",
     "    cards=[{\"title\": \"Card 2\"}]\n",
     ")\n",
-    "\n",
-    "page = mdc.Page(orientation=\"columns\", children=[section_1, section_2])\n",
+    "page = mdc.Page(id=\"page\", orientation=\"columns\", children=[section_1, section_2])\n",
     "navbar = mdc.NavBar(title=\"Custom dash\")\n",
     "\n",
     "layout = mdc.Dashboard(children=[navbar, page])"
@@ -48,13 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "typical-population",
    "metadata": {},
    "outputs": [],
    "source": [
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id=\"page\", component_property=\"errorStatus\"),\n",
+    "    Output(component_id=\"page\", component_property=\"errorMessage\"),\n",
+    "    Input(component_id=\"button\", component_property=\"n_clicks\"),\n",
+    "    prevent_initial_call=True,\n",
+    ")\n",
+    "def show_error_page(n_clicks):\n",
+    "    return [404, \"Error message\"]\n",
     "\n",
     "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
@@ -63,6 +73,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "00524167",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "901bf8c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -84,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
